[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "uvicorn>=0.51.0",
]
